--- a/regression.ipynb
+++ b/regression.ipynb
@@ -2,44 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\frankh\\python\\regression-challenge\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cd C:/Users/frankh/python/regression-challenge"
+    "cd C:/Users/frankh/python/regression_challenge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\frankh\\\\python\\\\regression-challenge'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +30,18 @@
     "import tensorflow        as tf\n",
     "import os\n",
     "import random\n",
+    "import time\n",
+    "import datetime\n",
+    "\n",
+    "from matplotlib                 import pyplot as pl\n",
     "\n",
     "from tensorflow\t                import keras\n",
     "from tensorflow.keras.models    import Sequential\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "from tensorflow.keras           import layers\n",
     "from tensorflow.keras.layers    import InputLayer\n",
+    "from tensorflow.keras.layers    import Dense\n",
+    "from tensorflow.keras.layers    import Dropout\n",
     "\n",
     "from sklearn.model_selection     import train_test_split\n",
     "from sklearn.preprocessing       import StandardScaler\n",
@@ -77,71 +64,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n",
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "unix1 = datetime.datetime.timestamp(datetime.datetime.now())*1000\n",
+    "print(unix1)\n",
     "print(tf.config.list_physical_devices('GPU'))\n",
     "print(tf.test.is_built_with_cuda())\n",
-    "reset_seeds()"
+    "reset_seeds()\n",
+    "unix2 = datetime.datetime.timestamp(datetime.datetime.now())*1000\n",
+    "print(unix2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       Serial No.   GRE Score  TOEFL Score  University Rating         SOP  \\\n",
-      "count  500.000000  500.000000   500.000000         500.000000  500.000000   \n",
-      "mean   250.500000  316.472000   107.192000           3.114000    3.374000   \n",
-      "std    144.481833   11.295148     6.081868           1.143512    0.991004   \n",
-      "min      1.000000  290.000000    92.000000           1.000000    1.000000   \n",
-      "25%    125.750000  308.000000   103.000000           2.000000    2.500000   \n",
-      "50%    250.500000  317.000000   107.000000           3.000000    3.500000   \n",
-      "75%    375.250000  325.000000   112.000000           4.000000    4.000000   \n",
-      "max    500.000000  340.000000   120.000000           5.000000    5.000000   \n",
-      "\n",
-      "            LOR         CGPA    Research  Chance of Admit   \n",
-      "count  500.00000  500.000000  500.000000         500.00000  \n",
-      "mean     3.48400    8.576440    0.560000           0.72174  \n",
-      "std      0.92545    0.604813    0.496884           0.14114  \n",
-      "min      1.00000    6.800000    0.000000           0.34000  \n",
-      "25%      3.00000    8.127500    0.000000           0.63000  \n",
-      "50%      3.50000    8.560000    1.000000           0.72000  \n",
-      "75%      4.00000    9.040000    1.000000           0.82000  \n",
-      "max      5.00000    9.920000    1.000000           0.97000  \n",
-      "   Serial No.  GRE Score  TOEFL Score  University Rating  SOP  LOR   CGPA  \\\n",
-      "0           1        337          118                  4  4.5   4.5  9.65   \n",
-      "1           2        324          107                  4  4.0   4.5  8.87   \n",
-      "2           3        316          104                  3  3.0   3.5  8.00   \n",
-      "3           4        322          110                  3  3.5   2.5  8.67   \n",
-      "4           5        314          103                  2  2.0   3.0  8.21   \n",
-      "\n",
-      "   Research  Chance of Admit   \n",
-      "0         1              0.92  \n",
-      "1         1              0.76  \n",
-      "2         1              0.72  \n",
-      "3         1              0.80  \n",
-      "4         0              0.65  \n",
-      "Index(['Serial No.', 'GRE Score', 'TOEFL Score', 'University Rating', 'SOP',\n",
-      "       'LOR ', 'CGPA', 'Research', 'Chance of Admit '],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = pd.read_csv(\"admissions_data.csv\")\n",
     "print(dataset.describe(include='all'))\n",
@@ -151,19 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['GRE Score', 'TOEFL Score', 'University Rating', 'SOP', 'LOR ', 'CGPA',\n",
-      "       'Research'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "features = dataset.iloc[:,1:-1]\n",
     "labels   = dataset.iloc[:,-1]\n",
@@ -172,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,19 +138,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['GRE Score', 'TOEFL Score', 'University Rating', 'SOP', 'LOR ', 'CGPA',\n",
-      "       'Research'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "numerical_features = features.select_dtypes(include=['float64', 'int64'])\n",
     "numerical_columns = numerical_features.columns\n",
@@ -229,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,175 +190,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4, 8, 16, 32, 64]\n",
-      "[2, 4, 8, 16, 32]\n",
-      "[10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 0.0033 - mae: 0.0388\n",
-      "[<keras.layers.core.dense.Dense object at 0x000001BCD8152108>, <keras.layers.core.dense.Dense object at 0x000001BCD81AAFC8>, <keras.layers.core.dense.Dense object at 0x000001BCD81CB848>]\n",
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " dense (Dense)               (None, 4)                 32        \n",
-      "                                                                 \n",
-      " dense_1 (Dense)             (None, 32)                160       \n",
-      "                                                                 \n",
-      " dense_2 (Dense)             (None, 1)                 33        \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 225\n",
-      "Trainable params: 225\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "None\n",
-      "0.0033310332801193 0.03884091228246689\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "val_mse_list = []\n",
     "val_mae_list = []\n",
     "lvl_1_list   = [2**I for I in range(2,7)]\n",
     "lvl_2_list   = [2**J for J in range(1,6)]\n",
     "epochs_list  = [10*E for E in range(1,11)]\n",
+    "batch_list   = [2**J for J in range(1,5)]\n",
     "print(lvl_1_list)\n",
     "print(lvl_2_list)\n",
     "print(epochs_list)\n",
-    "# MIN: 16 2 20 0.0032181069254875183\n",
-    "# MIN: 4 32 90 0.03884091228246689\n",
-    "# MIN: 4 32 90 0.03884091228246689\n",
-    "# MIN: 4 32 90 0.03884091228246689\n",
-    "lvl_1_list  = [4]\n",
+    "print(batch_list)\n",
+    "# MIN:  4 32 90       0.03884091228246689\n",
+    "lvl_1_list  = [32]\n",
     "lvl_2_list  = [32]\n",
-    "epochs_list = [90]\n",
+    "epochs_list = [60]\n",
+    "batch_list  = [16]\n",
     "for I in lvl_1_list:\n",
     "    for J in lvl_2_list: \n",
     "        for E in epochs_list:\n",
-    "            reset_seeds()\n",
-    "            model = Sequential()\n",
-    "            num_features = features_train_scale.shape[1]\n",
-    "            inputs = InputLayer(input_shape=(num_features,))\n",
-    "            model.add(inputs)\n",
-    "            model.add(layers.Dense(I, activation='relu'))\n",
-    "            model.add(layers.Dense(J, activation='relu'))        \n",
-    "            model.add(layers.Dense(1))\n",
-    "            opt = Adam(learning_rate=0.01)\n",
-    "            model.compile(loss='mse', metrics=['mae'], optimizer=opt)\n",
-    "            stop = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=50)\n",
-    "            model.fit(features_train_scale, labels_train, epochs=E, batch_size=3, verbose=0, validation_split=0.2, callbacks=[stop])\n",
-    "            val_mse, val_mae = model.evaluate(features_test_scale, labels_test, verbose=1)\n",
-    "            print(model.layers)\n",
-    "            print(model.summary())\n",
-    "            print(val_mse, val_mae)\n",
-    "            val_mse_list.append([I, J, E, val_mse])\n",
-    "            val_mae_list.append([I, J, E, val_mae])\n"
+    "            for B in batch_list:\n",
+    "                print('I:J:E:B', I, J, E, B)\n",
+    "                unix1 = datetime.datetime.timestamp(datetime.datetime.now())*1000\n",
+    "                reset_seeds()\n",
+    "                model = Sequential()\n",
+    "                num_features = features_train_scale.shape[1]\n",
+    "                inputs   = InputLayer(input_shape=(num_features,))\n",
+    "                hidden1  = Dense(I, activation='relu')            \n",
+    "                dropout1 = Dropout(0.1)\n",
+    "                hidden2  = Dense(J, activation='relu')            \n",
+    "                dropout2 = Dropout(0.2)\n",
+    "                outputs  = Dense(1)\n",
+    "                model.add(inputs)\n",
+    "                model.add(hidden1)\n",
+    "                model.add(dropout1)\n",
+    "                model.add(hidden2)        \n",
+    "                model.add(dropout2)\n",
+    "                model.add(outputs)\n",
+    "                opt = Adam(learning_rate=0.01)\n",
+    "                model.compile(loss='mse', metrics=['mae'], optimizer=opt)\n",
+    "                stop = EarlyStopping(monitor='val_loss', mode='min', verbose=0, patience=50)\n",
+    "                history = model.fit(features_train_scale, labels_train, epochs=E, batch_size=B, verbose=0, validation_split=0.2, callbacks=[stop])\n",
+    "                val_mse, val_mae = model.evaluate(features_test_scale, labels_test, verbose=0)\n",
+    "                unix2 = datetime.datetime.timestamp(datetime.datetime.now())*1000\n",
+    "                unixd = unix2 - unix1\n",
+    "                print(model.layers)\n",
+    "                print(model.summary())\n",
+    "                print(val_mse, val_mae)\n",
+    "                print('elapsed time:', unixd)\n",
+    "                val_mse_list.append([I, J, E, val_mse, unixd])\n",
+    "                val_mae_list.append([I, J, E, val_mae, unixd])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MIN: 4 32 90 0.03884091228246689\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "minI = 0\n",
-    "minJ = 0\n",
-    "minE = 0\n",
+    "minI   = 0\n",
+    "minJ   = 0\n",
+    "minE   = 0\n",
     "minMAE = 1\n",
-    "for I,J,E,MAE in val_mae_list:\n",
-    "    # print(str(I), str(J), str(E), str(MSE))\n",
+    "minT   = 0\n",
+    "for I,J,E,MAE,T in val_mae_list:\n",
+    "    # print(str(I), str(J), str(E), str(MSE), str(T))\n",
     "    if MAE<minMAE:\n",
-    "        minI = I\n",
-    "        minJ = J\n",
-    "        minE = E\n",
+    "        minI   = I\n",
+    "        minJ   = J\n",
+    "        minE   = E\n",
     "        minMAE = MAE\n",
-    "print('MIN:', str(minI), str(minJ), str(minE), str(minMAE))"
+    "        minT   = T\n",
+    "print('MIN:', str(minI), str(minJ), str(minE), str(minMAE), str(minT))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4/4 [==============================] - 0s 2ms/step\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "0     0.661321\n",
-      "1     0.703204\n",
-      "2     0.954549\n",
-      "3     0.713874\n",
-      "4     0.817477\n",
-      "        ...   \n",
-      "95    0.833468\n",
-      "96    0.839972\n",
-      "97    0.507549\n",
-      "98    0.727970\n",
-      "99    0.588899\n",
-      "Name: 0, Length: 100, dtype: float32\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "features_predict = pd.DataFrame(model.predict(features_test_scale))\n",
+    "features_predict.rename(columns={0:'COL'},inplace=True)\n",
     "print(type(features_predict))\n",
-    "print(features_predict.iloc[:,0])"
+    "print(features_predict.iloc[:,0])\n",
+    "print(features_predict.columns)\n",
+    "features_predict_list = []\n",
+    "for index, row in features_predict.iterrows():\n",
+    "    features_predict_list.append(row['COL'])\n",
+    "print(features_predict_list[0:10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "304    0.62\n",
-      "340    0.75\n",
-      "47     0.89\n",
-      "67     0.57\n",
-      "479    0.79\n",
-      "       ... \n",
-      "11     0.84\n",
-      "192    0.86\n",
-      "92     0.34\n",
-      "221    0.75\n",
-      "110    0.61\n",
-      "Name: Chance of Admit , Length: 100, dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "labels_test = pd.DataFrame(labels_test)\n",
+    "labels_test.rename(columns={'Chance of Admit ':'COL'},inplace=True)\n",
     "print(type(labels_test))\n",
-    "print(labels_test.iloc[:,0])"
+    "print(labels_test.iloc[:,0])\n",
+    "labels_test_list = []\n",
+    "for index, row in labels_test.iterrows():\n",
+    "    labels_test_list.append(row['COL'])\n",
+    "print(labels_test_list[0:10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pd.merge(features_predict.rename(columns={'0':'COL'}), labels_test.rename(columns={'Chance of Admit ':'COL'}))"
+    "plt.plot(labels_test_list, features_predict_list, \"o\", alpha=0.5)\n",
+    "plt.show()"
    ]
   },
   {
@@ -446,19 +315,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig = plt.figure()\n",
+    "ax1 = fig.add_subplot(2, 1, 1)\n",
+    "ax1.plot(history.history['mae'])\n",
+    "ax1.plot(history.history['val_mae'])\n",
+    "ax1.set_title('model mae')\n",
+    "ax1.set_ylabel('MAE')\n",
+    "ax1.set_xlabel('epoch')\n",
+    "ax1.legend(['train', 'validation'], loc='upper left')\n",
+    "ax2 = fig.add_subplot(2, 1, 2)\n",
+    "ax2.plot(history.history['loss'])\n",
+    "ax2.plot(history.history['val_loss'])\n",
+    "ax2.set_title('model loss')\n",
+    "ax2.set_ylabel('loss')\n",
+    "ax2.set_xlabel('epoch')\n",
+    "ax2.legend(['train', 'validation'], loc='upper left')\n",
+    "fig.tight_layout()\n",
+    "fig.savefig('plots.png')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "predicted_values = model.predict(features_test_scale) \n",
+    "print(r2_score(labels_test_list, features_predict_list)) "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -472,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
